# dapps-certification

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile.web  Dockerfile.ws  README.org  cabal.project  docker-compose.yml  flake.nix  plutus-certification.cabal  web.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: free-form.yaml  idea-template.yaml
.github/workflows/: ci-deploy.yml  ci-tests.yml
client/: Main.hs
dapps-certification-helpers/: dapps-certification-helpers.cabal
dapps-certification-helpers/build-flake/: Main.hs
dapps-certification-helpers/data/: Certify.hs  outputs.nix
dapps-certification-helpers/generate-flake/: Main.hs
dapps-certification-helpers/run-certify/: Main.hs
dapps-certification-helpers/src/IOHK/Certification/: Actions.hs
dapps-certification-interface/: dapps-certification-interface.cabal
dapps-certification-interface/build-flake/: Main.hs
dapps-certification-interface/data/: outputs.nix
dapps-certification-interface/generate-flake/: Main.hs
dapps-certification-interface/run-certify/: Main.hs
dapps-certification-interface/src/IOHK/Certification/: Interface.hs
dapps-certification-interface/src/IOHK/Certification/Interface/: Actions.hs
dapps-certification-persistence/: dapps-certification-persistence.cabal
dapps-certification-persistence/src/IOHK/Certification/: Persistence.hs
dapps-certification-persistence/src/IOHK/Certification/Persistence/: API.hs  FieldSelector.hs  Migration.hs  Pattern.hs  Structure.hs  example.json
dapps-certification-persistence/src/IOHK/Certification/Persistence/API/: Invoicing.hs  Profile.hs  Run.hs  SQLite.hs  UserRole.hs
dapps-certification-persistence/src/IOHK/Certification/Persistence/API/SQLite/: profileSummary.sql  profileSummaryLite.sql
dapps-certification-persistence/src/IOHK/Certification/Persistence/Migration/SQLite/: V0.hs  V1.hs  V2.hs  V3.hs  V4.hs  V5.hs
dapps-certification-persistence/src/IOHK/Certification/Persistence/Structure/: Certification.hs  Internal.hs  Invoicing.hs  Profile.hs  Run.hs  Subscription.hs
dapps-certification-signature-verification/: dapps-certification-signature-verification.cabal
dapps-certification-signature-verification/src/IOHK/Certification/: SignatureVerification.hs
dapps-certification-signature-verification/src/IOHK/Certification/SignatureVerification/: CBOR.hs
dapps-certification-signing-verification/: dapps-certification-signing-verification.cabal
dapps-certification-signing-verification/src/IOHK/Certification/: SigningVerification.hs
dapps-certification-signing-verification/src/IOHK/Certification/SigningVerification/: CBOR.hs
data/: run-certify-k8s.yaml.mustache
deploy/: dapps-certification-web.yaml  dapps-certification.yaml
docker-files/: build_and_run.sh  docker.nix  nix.conf  run-server.sh  run-web.sh  server.nix  start_web.sh
nix/: ci.nix  haskell.nix  hydra-jobs.nix  iogx-config.nix  outputs.nix  per-system-outputs.nix  shell.nix
nix/docker-files/: .env.local  default.env  docker.nix  run-docker-from-registry.sh  run-from-branch.sh  run-local.sh  run.sh  wallet-container-instructions.md
nix/materialized-aarch64-darwin/: default.nix
nix/materialized-aarch64-darwin/.plan.nix/: cicero-api.nix
nix/materialized-x86_64-linux/: default.nix
nix/materialized-x86_64-linux/.plan.nix/: basement.nix  cicero-api.nix  dapps-certification-interface.nix  eventuo11y-batteries.nix  eventuo11y.nix  plutus-certification.nix  servant-server.nix
nix/materialized/aarch64-darwin/: default.nix
nix/materialized/aarch64-darwin/.plan.nix/: dapps-certification-helpers.nix  dapps-certification-persistence.nix  dapps-certification-signature-verification.nix  dapps-certification-signing-verification.nix  plutus-certification.nix
nix/materialized/aarch64-linux/.plan.nix/: cardano-addresses.nix  cardano-crypto.nix  dapps-certification-helpers.nix  plutus-certification.nix
nix/materialized/x86_64-darwin/: default.nix
nix/materialized/x86_64-darwin/.plan.nix/: dapps-certification-helpers.nix  dapps-certification-interface.nix  dapps-certification-signature-verification.nix  plutus-certification.nix
nix/materialized/x86_64-linux/: default.nix
nix/materialized/x86_64-linux/.plan.nix/: dapps-certification-persistence.nix  plutus-certification.nix
react-web/: .env.production  .firebaserc  .gitignore  README.md  config-overrides.js  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
react-web/public/: index.html  manifest.json
react-web/src/: index.scss  index.tsx  jest.config.ts
react-web/src/api/: api.ts  endPoints.ts  onRequest.ts
react-web/src/app/: App.scss  App.test.tsx  App.tsx
react-web/src/constants/: constants.ts
react-web/src/hooks/: useComponentVisible.ts  useDelayedApi.ts  useForm.ts  useLocalStorage.ts  useLogs.ts
react-web/src/mocks/: serializerMock.js
react-web/src/store/: rootReducer.ts  store.ts
react-web/src/styles/: _colors.scss  _constants.scss  _helpers.scss
react-web/src/test/: customTestRenderHook.tsx
react-web/src/utils/: utils.ts
server/: Main.hs
src/Plutus/Certification/: API.hs  Cache.hs  CertificationBroadcaster.hs  Cicero.hs  Client.hs  CoinGeckoClient.hs  Crypto.hs  Crypto2.hs  GitHubClient.hs  GithubClient.hs  Htmx.hs  Internal.hs  JWT.hs  Local.hs  Metadata.hs  Metrics.hs  PdfInvoice.hs  ProfileWallet.hs  Server.hs  Synchronizer.hs  TransactionBroadcaster.hs  WalletClient.hs  Web3StorageClient.hs
test/: DatabaseSpec.hs  JSONSpec.hs  PatternSpec.hs  ProfileWalletSpec.hs  SignatureSpec.hs  Spec.hs
test/Data/: certification.v0.sqlite  certification.v1.sqlite  certification.v2.sqlite  certification.v3.sqlite  certification.v4.sqlite
test/Database/: Embedded.hs  Migration.hs
test/Instances/: Persistence.hs
test/ProfileWallet/: Data.hs  TxPreProcessingSpec.hs  TxProcessingSpec.hs
test/Utils/: JSON.hs
ts-client/: package.json  tsconfig.json
ts-client/lib/: index.d.ts  index.js
ts-client/lib/cjs/: index.js
ts-client/src/: index.ts
web/: index.html
web/assets/css/: styles.css
web/assets/js/: script.js
(+172 files in other folders)
