cabal-version: 3.4
name: plutus-certification
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: shea.levy@iohk.io
author: Shea Levy
homepage: https://github.com/input-output-hk/plutus-certification#readme
bug-reports: https://github.com/input-output-hk/plutus-certification/issues
description:
  Certification as a service for Plutus applications
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-certification

library
  build-depends:
    base ^>= 4.16.0.0,
    containers ^>= 0.6.5.1,
    servant ^>= 0.19,
    servant-client ^>= 0.19,
    servant-client-core ^>= 0.19,
    servant-server ^>= 0.19,
    conduit ^>= 1.3.4.2,
    cicero-api ^>= 0.1.0.0,
    network-uri ^>= 2.6.4.1,
    bytestring ^>= 0.11.1.0,
    uuid ^>= 1.3.15,
    text ^>= 1.2.5.0,
    mtl ^>= 2.2.2,
    http-client ^>= 0.7.11,
    http-client-tls ^>= 0.3.6.1,
    aeson ^>= 2.0.3.0,
    aeson-qq ^>= 0.8.4,
    exceptions ^>= 0.10.4,
    eventuo11y ^>= 0.1.0.0,
  hs-source-dirs: src
  exposed-modules:
    Plutus.Certification.API
    Plutus.Certification.Cache
    Plutus.Certification.Cicero
    Plutus.Certification.Client
    Plutus.Certification.Server
  other-modules: Paths_plutus_certification
  autogen-modules: Paths_plutus_certification
  default-language: Haskell2010

executable plutus-certification
  build-depends:
    base ^>= 4.16.0.0,
    aeson ^>= 2.0.3.0,
    servant-server ^>= 0.19,
    optparse-applicative ^>= 0.17.0.0,
    case-insensitive ^>= 1.2.1.0,
    http-types ^>= 0.12.3,
    warp ^>= 3.3.19,
    transformers ^>= 0.5.6.2,
    servant-client-core ^>= 0.19,
    async ^>= 2.2.4,
    eventuo11y ^>= 0.1.0.0,
    wai ^>= 3.2.3,
    singletons ^>= 3.0.1,
    text ^>= 1.2.5.0,
    plutus-certification
  main-is: Main.hs
  hs-source-dirs: server
  other-modules: Paths_plutus_certification
  autogen-modules: Paths_plutus_certification
  default-language: Haskell2010

executable plutus-certification-client
  build-depends:
    base ^>= 4.16.0.0,
    bytestring ^>= 0.11.1.0,
    servant ^>= 0.19,
    servant-client ^>= 0.19,
    servant-client-core ^>= 0.19,
    optparse-applicative ^>= 0.17.0.0,
    haskeline ^>= 0.8.2,
    http-client ^>= 0.7.11,
    http-client-tls ^>= 0.3.6.1,
    uuid ^>= 1.3.15,
    network-uri ^>= 2.6.4.1,
    aeson ^>= 2.0.3.0,
    plutus-certification
  main-is: Main.hs
  hs-source-dirs: client
  default-language: Haskell2010
