cabal-version: 3.4
name: plutus-certification
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: shea.levy@iohk.io
author: Shea Levy
homepage: https://github.com/input-output-hk/plutus-certification#readme
bug-reports: https://github.com/input-output-hk/plutus-certification/issues
description:
  Certification as a service for Plutus applications
build-type: Simple
data-files: data/run-certify-k8s.yaml.mustache

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-certification

library
  build-depends:
    base >= 4.14.3 && < 4.18,
    containers ^>= 0.6.5.1,
    servant ^>= 0.19,
    servant-client ^>= 0.19,
    servant-client-core ^>= 0.19,
    servant-server ^>= 0.19,
    conduit ^>= 1.3.4.2,
    conduit-aeson,
    network-uri ^>= 2.6.4.1,
    bytestring ^>= 0.11.1.0,
    uuid ^>= 1.3.15,
    text ^>= 1.2.5.0,
    mtl ^>= 2.2.2,
    async,
    http-client ^>= 0.7.11,
    http-client-tls ^>= 0.3.6.1,
    http-types ^>= 0.12.3,
    aeson ^>= 2.0.3.0,
    aeson-qq ^>= 0.8.4,
    exceptions ^>= 0.10.4,
    eventuo11y ^>= 0.3.2,
    eventuo11y-batteries ^>= 0.2.1,
    time ^>= 1.11.1.1,
    servant-swagger ^>= 1.1.11,
    swagger2,
    servant-swagger-ui,
    lens,
    filepath,
    temporary,
    jwt ^>=0.11.0,
    unordered-containers,
    vector,
    http-conduit,
    cryptonite,
    insert-ordered-containers,
    mustache,
    unliftio,
    typed-process,
    resourcet,

    -- for html
    lucid,
    servant-lucid,
    raw-strings-qq,

    shakespeare,

    blaze,
    blaze-html,
    servant-blaze,
    xml-html-qq,

    template-haskell,

    neat-interpolation,
    http-media,

    -- internal
    dapps-certification-signature-verification,
    dapps-certification-persistence,
    dapps-certification-interface,
    dapps-certification-helpers
  hs-source-dirs: src
  exposed-modules:
    Plutus.Certification.API
    Plutus.Certification.Cache
    Plutus.Certification.Client
    Plutus.Certification.Server
    Plutus.Certification.Server.Kube
    Plutus.Certification.Server.Local
    Plutus.Certification.GitHubClient
    Plutus.Certification.JWT
    Plutus.Certification.WalletClient
    Plutus.Certification.Synchronizer
    Plutus.Certification.Metadata
    Plutus.Certification.ProfileWallet
    Plutus.Certification.Htmx
  other-modules:
    Paths_plutus_certification
    Plutus.Certification.Metadata.Types
    Plutus.Certification.API.Routes
    Plutus.Certification.API.RunLog
    Plutus.Certification.API.Swagger
    Plutus.Certification.Web3StorageClient
    Plutus.Certification.Internal
    Plutus.Certification.Persistence.Instrumentation
    Plutus.Certification.WalletClient.Transaction
    Plutus.Certification.CertificationBroadcaster
    Plutus.Certification.Server.Internal
    Plutus.Certification.Server.Instance
    Plutus.Certification.CoinGeckoClient
    Plutus.Certification.Metrics
    Plutus.Certification.Htmx.Internal
  autogen-modules: Paths_plutus_certification
  default-language: Haskell2010

executable plutus-certification
  build-depends:
    base,
    aeson ^>= 2.0.3.0,
    servant-server ^>= 0.19,
    optparse-applicative ^>= 0.17.0.0,
    http-types ^>= 0.12.3,
    warp ^>= 3.3.19,
    servant-client-core ^>= 0.19,
    async ^>= 2.2.4,
    eventuo11y,
    eventuo11y-batteries,
    wai ^>= 3.2.3,
    wai-cors ^>= 0.2.7,
    singletons ^>= 3.0.1,
    text ^>= 1.2.5.0,
    time ^>= 1.11.1.1,
    bytestring ^>= 0.11.1.0,
    mtl ^>= 2.2.2,
    exceptions ^>= 0.10.4,
    plutus-certification,
    dapps-certification-persistence,
    dapps-certification-helpers,
    servant-swagger-ui,
    cryptonite,
    unordered-containers,
  main-is: Main.hs
  hs-source-dirs: server
  other-modules: Paths_plutus_certification
  autogen-modules: Paths_plutus_certification
  default-language: Haskell2010

executable plutus-certification-client
  build-depends:
    base,
    bytestring ^>= 0.11.1.0,
    servant ^>= 0.19,
    servant-client ^>= 0.19,
    servant-client-core ^>= 0.19,
    optparse-applicative ^>= 0.17.0.0,
    http-client ^>= 0.7.11,
    http-client-tls ^>= 0.3.6.1,
    uuid ^>= 1.3.15,
    network-uri ^>= 2.6.4.1,
    aeson ^>= 2.0.3.0,
    time ^>= 1.11.1.1,
    text ^>= 1.2.5.0,
    http-types ^>= 0.12.3,
    dapps-certification-helpers,
    base16-bytestring,
    plutus-certification
  main-is: Main.hs
  hs-source-dirs: client
  default-language: Haskell2010

test-suite plutus-certification-test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    ProfileWalletSpec
    PatternSpec
    JSONSpec
    ProfileWallet.Data
    Instances.Persistence
    Utils.JSON
    SignatureSpec
    Database.Embedded
    Database.Migration
    DatabaseSpec

  build-depends:
      base >= 4.14.3 && < 4.18
    , hspec
    , plutus-certification
    , dapps-certification-persistence
    , dapps-certification-signature-verification
    , text
    , raw-strings-qq
    , QuickCheck
    , aeson
    , aeson-pretty
    , bytestring
    , file-embed
    , temporary
    , selda
    , selda-sqlite
    , eventuo11y
    , quickcheck-instances
