cabal-version:      2.4
name:               dapps-certification-interface
version:            0.1.0.0
author:             Shea Levy
maintainer:         shea.levy@iohk.io

library
    exposed-modules:  IOHK.Certification.Interface
    build-depends:    base, aeson, text, swagger2, lens
    hs-source-dirs:   src
    default-language: Haskell2010
