cabal-version:      2.4
name:               dapps-certification-persistence
version:            0.1.0.0
author:             Bogdan Manole
maintainer:         bogdan.manole@iohk.io

library
    exposed-modules:  IOHK.Certification.Persistence
    other-modules:    IOHK.Certification.Persistence.Structure
                    , IOHK.Certification.Persistence.API
                    , IOHK.Certification.Persistence.Structure.Subscription
                    , IOHK.Certification.Persistence.Structure.Certification
                    , IOHK.Certification.Persistence.Structure.Run
                    , IOHK.Certification.Persistence.Structure.Profile
    build-depends: base
                 , selda
                 , selda-sqlite
                 , selda-postgresql
                 , uuid
                 , text
                 , time
                 , aeson
                 , swagger2
                 , lens
    hs-source-dirs:   src
    default-language: Haskell2010
