cabal-version:      2.4
name:               dapps-certification-persistence
version:            0.1.0.0
author:             Bogdan Manole
maintainer:         bogdan.manole@iohk.io

library
    exposed-modules:  IOHK.Certification.Persistence
                    , IOHK.Certification.Persistence.API.SQLite
    other-modules:    IOHK.Certification.Persistence.Structure
                    , IOHK.Certification.Persistence.API
                    , IOHK.Certification.Persistence.API.Run
                    , IOHK.Certification.Persistence.API.Profile
                    , IOHK.Certification.Persistence.API.UserRole
                    , IOHK.Certification.Persistence.Structure.Subscription
                    , IOHK.Certification.Persistence.Structure.Certification
                    , IOHK.Certification.Persistence.Structure.Run
                    , IOHK.Certification.Persistence.Structure.Profile
                    , IOHK.Certification.Persistence.Structure.Internal
                    , IOHK.Certification.Persistence.Pattern
                    , IOHK.Certification.Persistence.Migration
                    , IOHK.Certification.Persistence.FieldSelector
                    , IOHK.Certification.Persistence.Migration.SQLite.V0
                    , IOHK.Certification.Persistence.Migration.SQLite.V1
                    , IOHK.Certification.Persistence.Migration.SQLite.V2
                    , IOHK.Certification.Persistence.Migration.SQLite.V3
                    , IOHK.Certification.Persistence.Migration.SQLite.V4

    build-depends: base
                 , selda
                 , selda-sqlite
                 , selda-postgresql
                 , uuid
                 , text
                 , time
                 , aeson
                 , swagger2
                 , lens
                 , containers
                 , raw-strings-qq
                 , regex-pcre
                 , eventuo11y
                 , exceptions
                 , file-embed
                 , dapps-certification-interface
                 , bytestring
                 , scientific
    hs-source-dirs:   src
    default-language: Haskell2010
