cabal-version:      2.4
name:               dapps-certification-signature-verification
version:            0.1.0.0
author:             Bogdan Manole
maintainer:         bogdan.manole@iohk.io

library
    exposed-modules:  IOHK.Certification.SignatureVerification
    other-modules:    IOHK.Certification.SignatureVerification.CBOR
    build-depends:
          base
        , text
        , bytestring
        , cborg
        , cryptonite
        , base16-bytestring
        , blake2
        , cardano-addresses
    hs-source-dirs:   src
    default-language: Haskell2010
